[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/GUI/Assets/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/GUI/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GUI/Main_Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GUI/Assets/hover_button.tres" type="StyleBox" id=4]
[ext_resource path="res://Scenes/GUI/Assets/pressed_button.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/GUI/Assets/Normal_button.tres" type="StyleBox" id=6]

[node name="pause_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
main_menu = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.5
margin_top = -253.0
margin_right = 227.5
margin_bottom = 253.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="Button" parent="VBoxContainer"]
margin_right = 455.0
margin_bottom = 158.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Resume"

[node name="retry" type="Button" parent="VBoxContainer"]
margin_top = 183.0
margin_right = 455.0
margin_bottom = 341.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Retry"

[node name="main_menu" type="Button" parent="VBoxContainer"]
margin_top = 366.0
margin_right = 455.0
margin_bottom = 524.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lose"

[connection signal="button_up" from="VBoxContainer/resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="VBoxContainer/retry" to="." method="_on_retry_button_up"]
[connection signal="button_up" from="VBoxContainer/main_menu" to="." method="_on_main_menu_button_up"]
